feat: set localsetting database

--- a/APICatalogo/Properties/launchSettings.json
+++ b/APICatalogo/Properties/launchSettings.json
@@ -1,5 +1,8 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CatalogoDB;Uid=root;Pwd="
+  },
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
